2013-05-21  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_dev_random): Change type of pseudo to
	uint32_t to make sure it's 32 bit on all supported platforms.

2013-05-21  Corinna Vinschen  <corinna@vinschen.de>

	x86_64 only:
	* gendef (_sigfe_maybe): Drop pushing %r12, use %r10 instead since we
	don't call yield anymore.
	(_sigfe): Ditto.
	(_sigbe): Ditto.

2013-05-21  Corinna Vinschen  <corinna@vinschen.de>

	* libc/base64.c: New file.
	* Makefile.in (DLL_OFILES): Add base64.o.
	* common.din: Export __b64_ntop and __b64_pton.
	* posix.sgml (std-bsd): Add __b64_ntop and __b64_pton.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2013-05-21  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (open): Only return ENOTDIR if file exists.

2013-05-16  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* sigproc.cc (sig_hold): Delete.
	(sigheld): Delete.
	(sig_send): Eliminate special-case __SIGHOLD handling.
	(wait_sig): Just flag when signals are on hold and add them to the
	queue rather than stalling the wait_sig loop.  Clear the flag when
	__SIGNOHOLD is specified.

2013-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (devices_CFLAGS): Drop -Os.

2013-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (localtime_CFLAGS): Define as -fwrapv since localtime
	code requires int overflows to be fully defined.
	* localtime.cc: Align a bit more to upstream code.

2013-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (get_groups): Convert to void function.
	(initgroups32): Accommodate the aforementioned change.
	(getgrouplist): Ditto.

2013-05-14  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (get_groups): Never return error.  Always create a group list,
	even if it's empty.

2013-05-13  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* include/cygwin/version.h: Bump api minor number to reflect previous
	change.

2013-05-13  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* i686.din: Remove _strtold.